# chat_bot_ui_handler

./: .gitignore  README.md  aistudio_ui_handler.py  app.py  policies.json  pyproject.toml  search_google_ai_mode  setup.py  test_chat_bot_ui_handler.py  test_output.txt  test_persistent_chat.py
.github/workflows/: sync-to-hf.yml
chat_bot_ui_handler/: __init__.py  base_ui_flow.py  google_login_injector.py  notifier.py  utils.py
chat_bot_ui_handler/aistudio/: __init__.py  handler.py  handler_1.py
chat_bot_ui_handler/bing/: __init__.py  handler.py
chat_bot_ui_handler/brave/: __init__.py  handler.py
chat_bot_ui_handler/copilot/: __init__.py  handler.py
chat_bot_ui_handler/duckduckgo/: __init__.py  handler.py
chat_bot_ui_handler/gemini/: __init__.py  handler.py
chat_bot_ui_handler/grok/: __init__.py  handler.py
chat_bot_ui_handler/meta/: __init__.py  handler.py
chat_bot_ui_handler/mistral/: __init__.py  handler.py
chat_bot_ui_handler/moondream/: __init__.py  handler.py
chat_bot_ui_handler/pally/: __init__.py  handler.py
chat_bot_ui_handler/perplexity/: __init__.py  handler.py
chat_bot_ui_handler/qwen/: __init__.py  handler.py
chat_bot_ui_handler/search_google/: __init__.py  ai_mode.py
hf_backend/: Dockerfile  README.md  app.py  index.html  requirements.txt  worker.py
static/: script.js  style.css
